[package]
name = "lockjaw"
version = "0.1.0"
authors = ["Neil Locketz <neil@nlocketz.com>"]
edition = "2018"

[dependencies]
keyutils = "0.2.1"
sodiumoxide = "0.2.5"
ring = "0.16.15"
base64 = "0.12.3"
libc = "0.2.72"

[lib]
name = "lockjaw"
path = "src/lib.rs"

[[bin]]
name = "lj"
path = "src/main.rs"
