[package]
name = "lockjaw"
version = "0.1.0"
authors = ["Neil Locketz <neil@nlocketz.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
base64 = "0.12.3"
byteorder = "1.3.4"
keyutils = "0.2.1"
libc = "0.2.72"
ring = "0.16.15"
sodiumoxide = "0.2.5"

[lib]
name = "lockjaw"
path = "src/lib.rs"

[[bin]]
name = "lj"
path = "src/main.rs"
