[package]
name = "lockjaw"
version = "0.1.0"
authors = ["Neil Locketz <neil@nlocketz.com>"]
edition = "2018"

[dependencies]
base64 = "0.12.3"
byteorder = "1.3.4"
clap = "2.33.3"
keyutils = "0.2.1"
libc = "0.2.72"
ring = "0.16.15"
rmp-serde = "0.14.4"
serde = { version = "1.0.114", features = ["derive"] }
sodiumoxide = "0.2.5"

[lib]
name = "lockjaw"
path = "src/lib.rs"

[[bin]]
name = "lj"
path = "src/main.rs"
